# 20ng_load_file

./: pyproject.toml
20ng_load_file/: main.py
