[tool.poetry]
name = "20ng-load-file"
version = "0.1.0"
description = ""
authors = ["Kenneth Tam <ktam33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
